# sage

./: .dockerignore  .gitignore  .mailmap  AGENTS.md  AI_SUPPORT.md  ANNOUNCEMENT.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  COMPLETE_DEPLOYMENT_GUIDE.md  CONTRIBUTING.md  Dockerfile  GITHUB_OAUTH_SETUP.md  IMPLEMENTATION_SUMMARY.md  LAUNCH_ROADMAP.md  LICENSE  MANIFEST.in  MCP_SETUP.md  ML_V2_TODO.md  NPM_SECURITY_REVIEW.md  PRIVACY.md  PROJECT_STATUS.txt  QUICK_START.md  README.md  REPO_DESCRIPTION.txt  ROADMAP.md  SAGE_API_TELEMETRY_AND_COMMANDS_ROADMAP.md  SAGE_AUDIT_ROADMAP.md  SAGE_ENTERPRISE_ROADMAP.md  SAGE_GUI.md  SAGE_GUI_CLOUD_FIX_TODO.md  SAGE_LSP_AGENTIC.md  SAGE_READINESS_TODO.md  SAGE_REPAIR_TODO.md  SAGE_SESSION_COMPLETE.md  SAGE_SESSION_FIX.md  SAGE_V2_COMPLETE.md  SECURITY.md  SECURITY_HARDENING.md  SESSION_FILTERING_IMPLEMENTATION.md  (+23 more)
.claude/: settings.json
.claude/hooks/: enforce_sage.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  docs.yml  feature.yml  good_first_issue.yml  privacy.yml
.github/workflows/: ci.yml  pypi-publish.yml
cloudflare/sage-api/: DEPLOYMENT.md  README.md  wrangler.toml
codex-ab-proof/: codex-ab-report.json  with-sage-codex.jsonl  with-sage-compressed-prompt.txt  without-sage-codex.jsonl  without-sage-raw-prompt.txt
docs/: ACTIVATION_FUNNEL_AUDIT.md  ACTIVATION_FUNNEL_TRACKING.md  AGENT_LAYER_IMPLEMENTATION.md  ML_V2.md  PYPI_RELEASE.md
docs/archive/: CLEANUP_SUMMARY.md  FINAL_FIX.md  FIXES_COMPLETE.md  GUI_STATUS.md  PERSISTENT_SESSION_FIX.md  POWERSHELL_TERMINAL_PROMPT.md  README.md.bak  README_backup.md  REAL_FIX.md  SAGE_V2_COMPLETE.md.bak  SAGE_V2_COMPLETE_CLEAN.md  SAGE_V2_COMPLETE_CLEAN.md.bak  SAGE_V2_STATUS.md  TEST_RESULTS.md
docs/demo/: DEMO_GIFS.md
docs/releases/: v2.0.0-cli-public.md
editors/vscode/: package.json
electron/: .gitignore  electron-builder.yml  index.html  main.ts  package-lock.json  package.json  preload.ts  tailwind.config.ts  tsconfig.json  vite.config.ts
electron/src/: App.tsx  global.css
js/: .npmignore  LICENSE  README.md  package-lock.json  package.json  server.json  tsconfig.json
js/src/: index.ts  postinstall.ts
js/tests/: agents.test.ts  compression.test.ts  install.test.ts  ml.test.ts
public/: proof-dashboard.html
scripts/: README.md  complete_setup.ps1  create_demo_gifs.py  create_demo_video_assets.py  create_team_preview.py  deploy_to_cloudflare.ps1  deploy_to_cloudflare.sh  render_install_flow_gifs.py  repair_active_docs_mojibake.py  repair_gui_source_mojibake.py  setup_github_oauth.ps1  setup_github_oauth.sh
scripts/archive/: app_old.py  check_files.py  clean_mojibake.py  fix_all_mojibake.py  fix_binary.py  fix_encoding_complete.py  fix_encoding_final.py  fix_final.py  fix_mojibake.py  fix_mojibake_final.py  verify_encoding.py  verify_gui.py
src/: test_context.py  test_phase2.py  test_phase2_fixed.py  test_v2_features.py
src/sage/: __init__.py  __main__.py  artifacts.py  classify.py  cli.py  detectors.py  fileops.py  github_oauth.py  gui_server.py  install.py  reader.py  runner.py  savings.py  searcher.py  security.py  store.py  suggestions.py  telemetry.py  telemetry_sender.py
src/signaldeck/: cli.py  runner.py  store.py
tests/: 10K_CONTEXT_COMPRESSION_RESULTS.md  COMPRESSION_VERIFICATION.md  SAGE_HARDENING_RESULTS.md  test_10k_context_compression.py  test_agent_evaluation.py  test_agent_execution.py  test_agentic.py  test_claude_sage_enforcement.py  test_cli.py  test_cli_basic.py  test_commands_and_telemetry.py  test_compression_metrics.py  test_context_compression_roadmap.py  test_dashboard_render.py  test_db_storage_migration.py  test_detectors.py  test_fileops.py  test_gui_claude_provider_env.py  test_gui_codex_streaming.py  test_gui_context_token_totals.py  test_gui_memory_context.py  test_gui_metrics.py  test_gui_session_manager.py  test_install_command.py  test_lsp.py  test_mcp_sage_tools.py  test_ml_features.py  test_ml_soak.py  test_ml_v2.py  test_ml_validation.py  test_public_package_metadata.py  test_public_release_docs.py  test_roadmap_cli.py  test_security_privacy.py  test_soak.py  test_suggestions.py
tests/live/: test_compression_final.py  test_compression_live.py  test_compression_real.py  test_gui_live.py  test_gui_metrics.py  test_gui_widgets.py
(+230 files in other folders)
