[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sage"
version = "0.1.0"
description = "Smart Agent Guidance Engine for developer automation tools."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "PsYcGoD" }
]
keywords = ["ai", "cli", "terminal", "debugging", "local assistant", "terminal agent"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development",
  "Topic :: Utilities"
]

[project.scripts]
sage = "sage.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

