[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sage"
version = "2.0.0"
description = "Smart Agent Guidance Engine for developer automation tools."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "joblib>=1.3",
  "pandas>=2.0",
  "Pillow>=10",
  "pywinpty>=2.0; platform_system == 'Windows'",
  "PyYAML>=6",
  "scikit-learn>=1.3",
  "tiktoken>=0.7",
]

license = { text = "MIT" }
authors = [
  { name = "PsYcGoD" }
]
keywords = ["ai", "cli", "terminal", "debugging", "local assistant", "terminal agent"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development",
  "Topic :: Utilities"
]

[project.optional-dependencies]
gui = [
  "customtkinter>=5.2",
  "keyring>=24.0",
  "Pillow>=10",
  "psutil>=5.9",
]
ai = [
  "anthropic>=0.40",
  "boto3>=1.34",
  "google-generativeai>=0.8",
  "openai>=1.50",
  "requests>=2.31",
]
all = [
  "anthropic>=0.40",
  "boto3>=1.34",
  "customtkinter>=5.2",
  "google-generativeai>=0.8",
  "keyring>=24.0",
  "openai>=1.50",
  "Pillow>=10",
  "psutil>=5.9",
  "requests>=2.31",
]

[project.scripts]
sage = "sage.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"sage.gui" = ["assets/*"]


[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not gui and not live' --ignore=tests/live --ignore=tests/tests"
markers = [
  "gui: needs a Tk/Tcl display; excluded by default and in CI",
  "live: spawns real CLIs or long-running processes; excluded by default and in CI",
]
