[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "psycgod-sage"
version = "2.0.6"
description = "Local-first command wrapper for AI coding agents with compressed terminal output and privacy-safe proof metrics."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "joblib>=1.3",
  "keyring>=25",
  "numpy>=1.24.0",
  "pandas>=2.0",
  "PyYAML>=6",
  "scikit-learn>=1.3",
  "sentence-transformers>=3.0.0",
  "faiss-cpu>=1.8.0",
  "tiktoken>=0.7",
  "torch>=2.0.0",
]

license = "MIT"
license-files = ["LICENSE*"]
authors = [
  { name = "PsYcGoD" }
]
keywords = ["ai", "cli", "terminal", "debugging", "local assistant", "terminal agent"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development",
  "Topic :: Utilities"
]

[project.optional-dependencies]
ai = [
  "anthropic>=0.40",
  "boto3>=1.34",
  "google-generativeai>=0.8",
  "openai>=1.50",
  "requests>=2.31",
]
all = [
  "anthropic>=0.40",
  "boto3>=1.34",
  "google-generativeai>=0.8",
  "openai>=1.50",
  "requests>=2.31",
]

[project.scripts]
sage = "sage.cli:main"

[project.urls]
Homepage = "https://github.com/PsYcGoD/sage"
Repository = "https://github.com/PsYcGoD/sage"
Issues = "https://github.com/PsYcGoD/sage/issues"
Dashboard = "https://sage.api.marketingstudios.in/dashboard"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"sage.dashboard" = ["static/*.html"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not live' --ignore=tests/live --ignore=tests/tests"
markers = [
  "live: spawns real CLIs or long-running processes; excluded by default and in CI",
]
